gymapp/gymapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymapp-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: gymapp
  template:
    metadata:
      labels:
        app: gymapp
    spec:
      containers:
        - name: gymapp-container
          image: hkabra/gymapp:latest
          ports:
            - containerPort: 80
