gymapp/gymapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gymapp-service
spec:
  selector:
    app: gymapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
