gymapp/gymapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gymapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/ssl-cert: "arn:aws:acm:us-east-1:820242924248:certificate/979e8d24-865c-4091-85ae-7f6794c85c25"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: "alb"
  rules:
  - host: test.hkdevops.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gymapp-service
            port:
              number: 80
